[package]
name = "nomfun"
version = "0.1.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
edition = "2018"

[dependencies]
nom = "4.2"
bencher = "*"
fnv = "*"
jemallocator = "0.1.8"

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.bench]
debug = true
lto = true
codegen-units = 1

[[bench]]
name = "json"
harness = false

[[bench]]
name = "http"
harness = false

[[bench]]
name = "nom-http"
harness = false
